Commit all changes

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,5 +1,26 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
+
+body{
+    background-color: $main;
+}
+
+.content-area {
+    background-color: 	$main;
+}
+
+aside.widget-area {
+    background-color: $sidebar;
+}
+/*--------------------------------------------------------------
+# Site-Header
+--------------------------------------------------------------*/
+@import "site-header";
+
+/*--------------------------------------------------------------
+# Site-Footer
+--------------------------------------------------------------*/
+
+@import "site-footer";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
