--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,3 +1,30 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+                 font-family: $font__heading;
+}
+
+h6 {
+    @include font-size(1);
+    text-transform: uppercase;
+}
+
+h5 {
+    @include font-size(1);
+    font-style: italic;
+}
+
+h4 {
+    @include font-size(1.125);
+}
+
+h3 {
+    @include font-size(1.25);
+}
+
+h2 {
+    @include font-size(1.5);
+}
+
+h1 {
+    @include font-size(2);
 }
