--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,3 +1,14 @@
+$dusty: #96858f;
+$overcast: #6D7993;
+$lavender: #9099A2;
+$paper: #D5D5D5;
+$header:#757575;
+$footer:#B8B8B8;
+$main:#D3D3D3;
+$sidebar:#D3D3D3;
+$white: #FFFFFF;
+$black: #111111;
+
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
@@ -8,10 +19,10 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__link: #6A6A76;
+$color__link-visited: #7e7e8c;
+$color__link-hover: #4a4e5c;
+$color__text-main: $black;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
